--- a/.github/workflows/CI-docker-image.yml
+++ b/.github/workflows/CI-docker-image.yml
@@ -74,12 +74,14 @@ jobs:
     needs: push
 
     steps:
-      - name: Install Trivy
+      - name: Install Trivy (latest)
         run: |
           sudo apt-get update
           sudo apt-get install -y wget
-          wget https://github.com/aquasecurity/trivy/releases/latest/download/trivy_0.34.0_Linux-64bit.deb
-          sudo dpkg -i trivy_0.34.0_Linux-64bit.deb
+          wget https://aquasecurity.github.io/trivy-repo/deb/public.key -O - | sudo apt-key add -
+          echo deb https://aquasecurity.github.io/trivy-repo/deb/ $(lsb_release -sc) main | sudo tee -a /etc/apt/sources.list.d/trivy.list
+          sudo apt-get update
+          sudo apt-get install trivy
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
